--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,6 +2,8 @@ $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
+$portrait-image: url(../img/portrait.jpg);
+$portrait-image-sm: url(../img/portrait_sm.jpg);
 $background-opacity: 0.75;
 
 @mixin easeOut {
@@ -25,5 +27,30 @@ $background-opacity: 0.75;
                 background-color: rgba($primary-color, $background-opacity);
             }
         }
+    }
+}
+
+// Media Query Mixins
+@mixin mediaSm {
+    @media screen and (max-width: 500px) {
+        @content;
+    }
+}
+
+@mixin mediaMd {
+    @media screen and (max-width: 812px) {
+        @content;
+    }
+}
+
+@mixin mediaLg {
+    @media screen and (min-width: 813px) and (max-width: 1170px) {
+        @content;
+    }
+}
+
+@mixin mediaXl {
+    @media screen and (min-width: 1171px) {
+        @content;
     }
 }
