--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,6 @@
 @import 'config';
+@import 'menu';
+@import 'mobile';
 
 * {
     box-sizing: border-box;
@@ -52,6 +54,7 @@ main {
         margin-top: 1rem;
         a {
             padding: 0.4rem;
+
             &:hover {
                 color: $secondary-color;
                 @include easeOut();
