--- a/scss/main.scss
+++ b/scss/main.scss
@@ -107,6 +107,78 @@ main {
     }
 }
 
+// Work/Projects
+.projects {
+    display: grid;
+    grid-gap: 0.7rem;
+    grid-template-columns: repeat(3, 1fr);
+
+    img {
+        width: 100%;
+        border: 3px #fff solid;
+
+        &:hover {
+            opacity: 0.5;
+            border-color: $secondary-color;
+            @include easeOut;
+        }
+    }
+}
+
+// Contact Page
+.boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+
+    div {
+        font-size: 2rem;
+        border: 3px #fff solid;
+        padding: 1.5rem 2.5rem;
+        margin: 0 1rem 3rem 1rem;
+        text-align: center;
+        @include easeOut;
+        cursor: pointer;
+
+
+        &:hover {
+            padding: 0.5rem 1.5rem;
+            background-color: $secondary-color;
+            color: set-text-color($secondary-color);
+            span {
+                color: set-text-color($secondary-color);
+            }
+        }
+    }
+}
+
+// Button Styles
+.btn {
+    display: block;
+    padding: 0.5rem 1rem;
+    border: 0;
+    margin-bottom: 0.3rem;
+
+    &:hover {
+        background-color: $secondary-color;
+        color: set-text-color($secondary-color);
+    }
+}
+
+.btn-dark {
+    @extend .btn;
+    background-color: darken($color: $primary-color, $amount: 50);
+    color: #fff;
+}
+
+.btn-light {
+    @extend .btn;
+    background-color: lighten($color: $primary-color, $amount: 50);
+    color: #333;
+}
+
 #main-footer {
     text-align: center;
     padding: 1rem;
